# StackTrace

./: .gitignore  LICENSE  README.md  StackTrace.sln  build.bat
.github/workflows/: publish.yml  release.yml
StackTrace/: .gitignore  CMakeLists.txt  StackTrace.vcxproj  StackTrace.vcxproj.filters  context.cpp  example.py  main.cpp  stacktrace_example_usage.py  types.h  unwind.cpp
StackTrace/python_pkg/: setup.py
StackTrace/python_pkg/stacktrace/: __init__.py  _core.cp312-win_amd64.pyd  _core.cp314-win_amd64.pyd
StackTrace/src/cli/: main.cpp
StackTrace/src/core/: stack_walker.cpp
StackTrace/src/include/: stack_walker.h  stacktrace.h  types.h
StackTrace/src/python/: README.md  example.py  pybindings.cpp  pyproject.toml  setup.py
StackTrace/src/python/stacktrace/: __init__.py
StackTrace/src/python/stacktrace.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
StackTrace_Backup/: context.h  main.cpp  unwind.h
