[build-system]
requires = ["setuptools>=77.0.0", "wheel", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stacktrace"
version = "1.0.0"
description = "Low-level Windows Stack Trace Engine"
requires-python = ">=3.8"
license = "MIT"
authors = [{name = "Raul Mansurov", email = "mansurovraul1@gmail.com"}]
dependencies = ["pybind11>=2.10.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
]

[project.urls]
Homepage = "https://github.com/Raulisr00t/StackTrace"
